--- a/initial-config/ocp4-klaassen-cluster-installation.yaml
+++ b/initial-config/ocp4-klaassen-cluster-installation.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: ocp4-klaassen-cluster-installation
-  namespace: openshift-operators
+  namespace: openshift-gitops
 spec:
   destination:
     server: 'https://kubernetes.default.svc'
