fixed gitops config

--- a/initial-config/ocp4-klaassen-cluster-installation.yaml
+++ b/initial-config/ocp4-klaassen-cluster-installation.yaml
@@ -10,3 +10,7 @@ spec:
     repoURL: 'https://github.com/marcoklaassen/klaassen-ocp'
     path: gitops
   project: default
+  ignoreDifferences:
+    - group: user.openshift.io
+      jsonPointers:
+        - /spec/groups
