fixed gitops config

--- a/initial-config/ocp4-klaassen-cluster-installation.yaml
+++ b/initial-config/ocp4-klaassen-cluster-installation.yaml
@@ -12,5 +12,6 @@ spec:
   project: default
   ignoreDifferences:
     - group: user.openshift.io
+      kind: User
       jsonPointers:
         - /spec/groups
