update ocp version and some docs

--- a/server.config
+++ b/server.config
@@ -15,4 +15,4 @@ LV vg0   var    /var    ext4      50G
 LV vg0   libvirt /var/lib/libvirt/images xfs all
 
 
-IMAGE /root/.oldroot/nfs/images/CentOS-85-64-minimal.tar.gz
+IMAGE <your-image>
