ignore managed config map in openshift-console

--- a/initial-config/ocp4-klaassen-cluster-installation.yaml
+++ b/initial-config/ocp4-klaassen-cluster-installation.yaml
@@ -15,7 +15,7 @@ spec:
       kind: User
       jsonPointers:
         - /groups
-    - group: core
+    - group: ""
       kind: ConfigMap
       name: custom-logo
       namespace: openshift-console
