--- a/gitops/admin-user-crb.yaml
+++ b/gitops/admin-user-crb.yaml
@@ -6,6 +6,12 @@ subjects:
   - kind: User
     apiGroup: rbac.authorization.k8s.io
     name: marcoklaassen
+  - kind: Group
+    apiGroup: rbac.authorization.k8s.io
+    name: 'system:cluster-admins'	
+  - kind: User
+    apiGroup: rbac.authorization.k8s.io
+    name: 'system:admin'
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
