update cluster version and some docs

--- a/server.config
+++ b/server.config
@@ -15,4 +15,4 @@ LV vg0   var    /var    ext4      50G
 LV vg0   libvirt /var/lib/libvirt/images xfs all
 
 
-IMAGE <your-image>
+IMAGE CentOS-91-amd64-minimal.tar.xz
