upgrade gitops operator

--- a/initial-config/gitops-operator.yml
+++ b/initial-config/gitops-operator.yml
@@ -2,13 +2,13 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   labels:
-    operators.coreos.com/openshift-gitops-operator.openshift-operators: ''
+    operators.coreos.com/openshift-gitops-operator.openshift-gitops-operator: ''
   name: openshift-gitops-operator
-  namespace: openshift-operators
+  namespace: openshift-gitops-operator
 spec:
   channel: latest
   installPlanApproval: Automatic
   name: openshift-gitops-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: openshift-gitops-operator.v1.9.0
+  startingCSV: openshift-gitops-operator.v1.12.2
