upgrade to new server and updated ocp version

--- a/server.config
+++ b/server.config
@@ -1,5 +1,6 @@
-DRIVE1 /dev/sda
-DRIVE2 /dev/sdb
+DRIVE1 /dev/nvme0n1
+DRIVE2 /dev/nvme1n1
+
 SWRAID 1
 SWRAIDLEVEL 0
 BOOTLOADER grub
@@ -7,11 +8,11 @@ HOSTNAME redhat-klaassen
 PART /boot ext3     512M
 PART lvm   vg0       all
 
-LV vg0   root   /       ext4     300G
-LV vg0   swap   swap    swap      10G
-LV vg0   tmp    /tmp    ext4      20G
-LV vg0   home   /home   ext4      50G
-LV vg0   var    /var    ext4      50G
+LV vg0   root   /       ext4     500G
+LV vg0   swap   swap    swap      50G
+LV vg0   tmp    /tmp    ext4      50G
+LV vg0   home   /home   ext4     100G
+LV vg0   var    /var    ext4     100G
 LV vg0   libvirt /var/lib/libvirt/images xfs all
 
 
