upgrade cluster and switch from RHEL to CentOS

--- a/server.config
+++ b/server.config
@@ -5,10 +5,10 @@ SWRAID 1
 SWRAIDLEVEL 0
 BOOTLOADER grub
 HOSTNAME redhat-klaassen
-PART /boot ext3     512M
-PART lvm   vg0       all
+PART /boot ext3     1024M
+PART lvm   vg0       950G
 
-LV vg0   root   /       ext4     500G
+LV vg0   root   /       ext4     400G
 LV vg0   swap   swap    swap      50G
 LV vg0   tmp    /tmp    ext4      50G
 LV vg0   home   /home   ext4     100G
@@ -16,4 +16,4 @@ LV vg0   var    /var    ext4     100G
 LV vg0   libvirt /var/lib/libvirt/images xfs all
 
 
-IMAGE CentOS-91-amd64-minimal.tar.xz
+IMAGE images/CentOS-90-stream-amd64-base.tar.gz
