--- a/gitops/admin-user-crb.yaml
+++ b/gitops/admin-user-crb.yaml
@@ -6,6 +6,9 @@ subjects:
   - kind: User
     apiGroup: rbac.authorization.k8s.io
     name: marcoklaassen
+  - kind: User
+    apiGroup: rbac.authorization.k8s.io
+    name: tmichelis-rh
   - kind: Group
     apiGroup: rbac.authorization.k8s.io
     name: 'system:cluster-admins'	
